change background path

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
 	font-family: serif;
-	background-image: url("/connection-3234929_1280.jpg");
+	background-image: url("connection-3234929_1280.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	/* height: 100vh;
