--- a/style.css
+++ b/style.css
@@ -1,18 +1,9 @@
-:root {
-	--red: rgb(255, 0, 0);
-}
-
 body {
-	font-family: serif;
-	background-image: url("connection-3234929_1280.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	/* height: 100vh;
-	width: 100vw; */
+	font-family: 'Montserrat', sans-serif;
 }
 main {
+	position: relative;
 	padding-top: 2vh;
-	background-color: rgba(255, 255, 255, 0.06);
 	margin: 0 15vw;
 	border-radius: 15px;
 }
@@ -20,10 +11,6 @@ main {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	/* height: 100vh; */
-	/* display: none; */
-	/* margin-top: 15vh; */
-	/* width: 100vw; */
 }
 
 .wrapper {
@@ -32,18 +19,12 @@ main {
 	display: grid;
 	grid-template-columns: repeat(3, 100px);
 	grid-template-rows: repeat(3, 100px);
-
 	background-color: rgba(237, 233, 233, 0.5);
-	/* gap: 5px; */
-
-	/* opacity: 0.5; */
 	cursor: pointer;
 	font-size: 4rem;
 	text-align: center;
-	/* padding-top: 5px; */
 }
 .box {
-	/* padding-top: 15px; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -53,12 +34,9 @@ main {
 	background-color: #fff;
 }
 .winner {
-	/* height: 20px; */
 	margin: 1rem 0;
 	font-size: 3rem;
-	color: var(--red);
 	text-align: center;
-	/* text-decoration: underline; */
 }
 .box:hover {
 	transform: scale(1.05);
@@ -66,7 +44,6 @@ main {
 
 .test {
 	z-index: -1;
-	/* padding: 10px; */
 }
 .test2 {
 	z-index: +100;
@@ -74,20 +51,22 @@ main {
 
 h1 {
 	text-align: center;
-	color: var(--red);
 	font-weight: bold;
 	font-size: 3rem;
 	margin: 0.6rem 0;
 	width: 30vw;
-	background-color: rgba(255, 255, 255, 0.15);
 	border-radius: 15px;
+}
+.top-section {
+	display: flex;
+	flex-direction: row;
 }
 header {
 	margin: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
+	flex-direction: row;
 }
 .new_game {
 	display: flex;
@@ -95,7 +74,6 @@ header {
 	justify-content: center;
 	text-align: center;
 	margin-top: 3rem;
-
 	margin: 5vh 25vw;
 }
 .img_container {
@@ -109,15 +87,25 @@ header {
 }
 .reset {
 	cursor: pointer;
-	/* width: 400px; */
 	padding: 10px;
 	border-radius: 10px;
 	transition: transform 0.4s;
-	background-color: var(--red);
 	font-size: 1.2rem;
-	color: rgb(30, 48, 90);
-	/* max-width: 400px; */
 }
 .reset:hover {
 	transform: scale(1.05);
+}
+
+.dark-md {
+	background-color: #000;
+	color: white;
+	border-color: white;
+}
+#bulb-container {
+	display: flex;
+	flex-direction: row-reverse;
+}
+#bulb {
+	font-size: 2rem;
+	padding: 5px;
 }
