Change donkey height

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ h1 {
 	margin: 1rem 0;
 	font-size: 1.1rem;
 	text-align: center;
+	padding: 0;
 }
 .top-section {
 	display: flex;
@@ -82,8 +83,8 @@ header {
 	align-items: center;
 }
 .osiol {
-	margin-top: 2vh;
-	height: 120px;
+	margin-top:2vh;
+	height: 80px;
 }
 .reset {
 	cursor: pointer;
@@ -107,13 +108,16 @@ header {
 	flex-direction: row-reverse;
 }
 #bulb {
-	font-size: 2rem;
+	font-size: 1.5rem;
 	padding: 5px;
 }
 
 @media (min-width: 580px) {
 	.reset {
 		font-size: 1rem;
+	}
+	.osiol{
+		height: 100px;
 	}
 
 	h1 {
@@ -129,9 +133,12 @@ header {
 		font-size: 1.2rem;
 	}
 	h1 {
-		font-size: 1.9rem;
+		font-size: 1.7rem;
 	}
 	.winner {
-		font-size: 1.6rem;
+		font-size: 1.5rem;
+	}
+	.osiol{
+		height: 120px;
 	}
 }
