--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header {
 	align-items: center;
 }
 .osiol {
-	margin-top:2vh;
+	margin-top: 2vh;
 	height: 80px;
 }
 .reset {
@@ -111,12 +111,46 @@ header {
 	font-size: 1.5rem;
 	padding: 5px;
 }
+.menu {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.start-menu {
+	margin-top: 10vh;
+	display: flex;
+	flex-direction: column;
+	width: 80vw;
+	justify-content: center;
+	align-items: center;
+}
+.start-menu-header {
+	font-size: 1.8rem;
+}
+.start-menu-item {
+	padding: 10px 20px;
+	width: 100%;
+	height: 200px;
+	margin-top: 3vh;
+	font-size: 1.6rem;
+	background-color: #84bbdb;
+	border-radius: 5px;
+	border: none;
+	transition: transform 0.5s;
+}
+.start-menu-item:hover {
+	transform: scale(1.1);
+}
+.none {
+	display: none;
+}
 
 @media (min-width: 580px) {
 	.reset {
 		font-size: 1rem;
 	}
-	.osiol{
+	.osiol {
 		height: 100px;
 	}
 
@@ -138,7 +172,7 @@ header {
 	.winner {
 		font-size: 1.5rem;
 	}
-	.osiol{
+	.osiol {
 		height: 120px;
 	}
 }
