--- a/style.css
+++ b/style.css
@@ -126,14 +126,16 @@ header {
 	align-items: center;
 }
 .start-menu-header {
-	font-size: 1.8rem;
+	font-size: 1.4rem;
+	text-align: center;
+	width: 80vw;
 }
 .start-menu-item {
-	padding: 10px 20px;
+	padding: 25px 10px;
 	width: 100%;
-	height: 200px;
-	margin-top: 3vh;
-	font-size: 1.6rem;
+	/* height: 100px; */
+	margin-top: 10vh;
+	font-size: 1rem;
 	background-color: #84bbdb;
 	border-radius: 5px;
 	border: none;
@@ -147,6 +149,13 @@ header {
 }
 
 @media (min-width: 580px) {
+	.start-menu-header {
+		font-size: 1.8rem;
+	}
+	.start-menu-item {
+		font-size: 1.6rem;
+	}
+
 	.reset {
 		font-size: 1rem;
 	}
@@ -163,6 +172,13 @@ header {
 }
 
 @media (min-width: 776px) {
+	.start-menu-header {
+		font-size: 2.4rem;
+	}
+	.start-menu-item {
+		font-size: 2rem;
+		padding: 55px 10px;
+	}
 	.reset {
 		font-size: 1.2rem;
 	}
