--- a/style.css
+++ b/style.css
@@ -126,16 +126,16 @@ header {
 	align-items: center;
 }
 .start-menu-header {
-	font-size: 1.4rem;
+	font-size: 1.8rem;
 	text-align: center;
 	width: 80vw;
 }
 .start-menu-item {
-	padding: 25px 10px;
+	padding: 65px 10px;
 	width: 100%;
 	/* height: 100px; */
 	margin-top: 10vh;
-	font-size: 1rem;
+	font-size: 1.6rem;
 	background-color: #84bbdb;
 	border-radius: 5px;
 	border: none;
@@ -153,7 +153,14 @@ header {
 		font-size: 1.8rem;
 	}
 	.start-menu-item {
-		font-size: 1.6rem;
+		/* padding: 25px 10px; */
+	width: 100%;
+	/* height: 100px; */
+	margin-top: 10vh;
+	font-size: 1.6rem;
+	background-color: #84bbdb;
+	border-radius: 5px;
+	border: none;
 	}
 
 	.reset {
@@ -177,7 +184,7 @@ header {
 	}
 	.start-menu-item {
 		font-size: 2rem;
-		padding: 55px 10px;
+		padding: 65px 10px;
 	}
 	.reset {
 		font-size: 1.2rem;
